Extended [Exam_Application] module:added Buttons and smart button in module

--- a/Exam_Application/views/exam_menus_views.xml
+++ b/Exam_Application/views/exam_menus_views.xml
@@ -2,11 +2,11 @@
 <odoo>
     <menuitem
         id="exam_menu"
-        name="Exam" />
+        name="Exam Details" />
 
     <menuitem
         id="student_details"
-        name="Student"
+        name="Student-Exam details"
         parent="exam_menu"
         action="action_student_details" />
 </odoo>
