Extended [Exam_Application] module:added Constrains(sql constrains ans python constrains)

--- a/Exam_Application/views/exam_menus_views.xml
+++ b/Exam_Application/views/exam_menus_views.xml
@@ -9,4 +9,10 @@
         name="Student-Exam details"
         parent="exam_menu"
         action="action_student_details" />
+
+    <menuitem
+        id="faculty_details"
+        name="Faculty-Exam details"
+        parent="exam_menu"
+        action="action_faculty_details" />
 </odoo>
