--- a/Exam_Application/views/student_views.xml
+++ b/Exam_Application/views/student_views.xml
@@ -17,7 +17,7 @@
                 <field name="color_widget"  widget="color_picker"></field>
                 <field name="boolean_field" widget="boolean_toggle"></field>
                 <field name="boolean_rating_field" widget="boolean_favorite"></field>
-                <field name="product_desc"></field>
+                <field name="exam_desc"></field>
                 <field name="documents_attach"></field>
                 <field name="relation_field1" widget="many2one_avatar"></field>
                 <field name="relation_field2" widget="many2many_tags"></field>
@@ -34,7 +34,7 @@
                 <header>
                     <field name="state_field" widget="statusbar" statusbar_visible="draft,in progress,done"/>
                     <button string="Button Draft" class="btn-primary" name="action_draft" type="object"/>
-                    <button string="Button In Progress" name="action_in_progress" type="object"/>
+                    <button string="Button In Progress" class="btn-success" name="action_in_progress" type="object"/>
                     <button string="Button Done" class="btn-danger" name="action_done" type="object"/>
                     <!--<field name="state_field" widget="statusbar" options="{'clickable': True}" statusbar_visible="draft,in_progress,done"/> onclick button-->
                 </header>
@@ -63,7 +63,7 @@
                             <field name="color_widget" widget="color_picker"></field>
                             <field name="boolean_field"></field>
                             <field name="boolean_rating_field"></field>
-                            <field name="product_desc"></field>
+                            <field name="exam_desc"></field>
                             <field name="relation_field1"></field>
                         </group>
                     </group>
@@ -75,7 +75,7 @@
                                     <field name="student_id"></field>
                                     <field name="student_name"></field>
                                     <field name="student_fees"></field>
-                                    <field name="student_subject"></field>
+                                    <field name="student_exam_subject_name"></field>
                             </tree>
                         </field>
                     </page>
@@ -98,7 +98,7 @@
                 <field name="select_option"></field>
                 <field name="roll_number"></field>
                 <field name="documents_attach"></field>
-                <field name="product_desc"></field>
+                <field name="exam_desc"></field>
                 <field name="relation_field1"></field>
                 <field name="relation_field2"></field>
                 <field name="relation_field3"></field>
@@ -129,13 +129,13 @@
             <kanban>
                 <field name="name_field"></field>
                 <field name="roll_number"></field>
-                <field name="product_desc"></field>
+                <field name="exam_desc"></field>
                 <templates>
                     <t t-name="kanban-box">
                         <div class="oe_kanban_card">
                             <span t-esc="record.name_field.raw_value"></span>
                             <span t-esc="record.roll_number.raw_value"></span>
-                            <span t-esc="record.product_desc.raw_value"></span>
+                            <span t-esc="record.exam_desc.raw_value"></span>
                         </div>
                     </t>
                 </templates>
@@ -150,9 +150,15 @@
         <field name="arch" type="xml">
             <tree>
                 <field name="student_id"></field>
+                <field name="student_enrollment_no"></field>
                 <field name="student_name" widget="badge"></field>
+                <field name="student_address"></field>
+                <field name="student_confirmation"></field>
                 <field name="student_fees"></field>
-                <field name="student_subject" widget="badge"></field>
+                <field name="student_exam_subject_name" widget="badge"></field>
+                <field name="student_exam_date"></field>
+                <field name="student_exam_date_time"></field>
+                <field name="student_exam_hallticket_attach"></field>
             </tree>
         </field>
     </record>
@@ -167,11 +173,17 @@
                     <group>
                         <group>
                             <field name="student_id"></field>
+                            <field name="student_enrollment_no"></field>
                             <field name="student_name"></field>
+                            <field name="student_address"></field>
+                            <field name="student_confirmation"></field>
                         </group>
                         <group>
                             <field name="student_fees"></field>
-                            <field name="student_subject"></field>
+                            <field name="student_exam_date"></field>
+                            <field name="student_exam_date_time"></field>
+                            <field name="student_exam_subject_name"></field>
+                            <field name="student_exam_hallticket_attach"></field>
                         </group>
                     </group>
                 </sheet>
@@ -182,7 +194,15 @@
     <record id="action_student_details" model="ir.actions.act_window">
         <field name="name">Exam Details</field>
         <field name="res_model">exam.details</field>
-        <field name="view_mode">tree,kanban,form</field>
+        <field name="view_mode">tree,kanban,search,form</field>
     </record>
+
+     <record id="action_faculty_details" model="ir.actions.act_window">
+        <field name="name">Faculty Details</field>
+        <field name="res_model">faculty.details</field>
+        <field name="view_mode">tree,search,form</field>
+    </record>
+
+
 
 </odoo>
