Extended [Exam Application] module:Added 5 new models and fields with widgets and relational widgets and smart button

--- a/Exam_Application/views/exam_menus_views.xml
+++ b/Exam_Application/views/exam_menus_views.xml
@@ -5,14 +5,32 @@
         name="Exam Details" />
 
     <menuitem
+        id="exam_details"
+        name="Exam details"
+        parent="exam_menu"
+        action="action_exam_details"/>
+
+    <menuitem
         id="student_details"
-        name="Student-Exam details"
+        name="[Student]-Exam details"
         parent="exam_menu"
         action="action_student_details" />
 
     <menuitem
         id="faculty_details"
-        name="Faculty-Exam details"
+        name="[Faculty]-Exam details"
         parent="exam_menu"
         action="action_faculty_details" />
+
+    <menuitem
+        id="supervisor_details"
+        name="[Supervisor]-Exam details"
+        parent="exam_menu"
+        action="action_supervisor_details"/>
+
+    <menuitem
+        id="subject_details"
+        name="[Subject]-Exam details"
+        parent="exam_menu"
+        action="action_examsubject_details" />
 </odoo>
